== 0.3.3 (In Git)

=== Bugfixes
* Summaries are no longer printed in an empty () if there are no scenarios/steps (Aslak Hellesøy)
* Background, Scenario Outline, Before Hook interaction (#309 Aslak Hellesøy)
* Multiline String snippets no longer give misleading info. It's a String, not a PyString that's sent to step def.

== 0.3.2 2009-05-05

This release has some minor bug fixes and new features.
Nothing major, but we need a release for RailsConf'09 in Las Vegas!

=== Bugfixes
* rake tasks with profiles not respecting --require flags (#311 Ben Mabey)
* Step table with blank cell fails (#308 JohnnyT)
* Fixed error where unused table cells in Examples where raising exceptions due to having no status (#302 Joseph Wilk)

=== New features
* Support for Hebrew (Ido Kanner)
* Summary should report scenarios (#32 Aslak Hellesøy)
* Examples and the associated tables are indented one level deeper than Scenario Outline. (Aslak Hellesøy)
* Added support for Examples selection when using --name. (#295 Joseph Wilk)

== 0.3.1 2009-04-26

This release has several minor bug fixes and new features. With the addition of Latvian and Hungarian Cucumber
now supports 32(!!) languages.

=== New features
* Support multiline names for Scenarios, Scenario Outlines, Backgrounds, Examples (#231 Joseph Wilk)
* Added #headers to Cucumber::Ast::Table (Ben Mabey)
* New translation for Latvian (Vitauts Stočka)
* New translation for Hungarian (#287 Bence Golda)
* Pick up failure on after hook (#272 Aslak Hellesøy)

=== Bugfixes
* Pretty formatter not colouring Examples tables correctly (#304 Aslak Hellesøy)
* Problem using --scenario and Scenario Outline (#298 Aslak Hellesøy)
* Tag Hook gets executed always there is a background (#301 Aslak Hellesøy)
* Feature which only has a Background with steps causes an exception (#306 Aslak Hellesøy)
* Gem no longer depends on Hoe (Aslak Hellesøy)
* Span html tags appear on HTML results with 0.3.0 (#299 Aslak Hellesøy)