@@ -158,6 +158,7 @@ examples/selenium/features/search.feature
 examples/selenium/features/step_definitons/search_steps.rb
 examples/selenium/features/support/env.rb
 examples/selenium_webrat/Rakefile
+examples/selenium_webrat/config.ru
 examples/selenium_webrat/features/search.feature
 examples/selenium_webrat/features/step_definitons/search_steps.rb
 examples/selenium_webrat/features/support/env.rb
