@@ -4,7 +4,7 @@ Feature: Snippets
   I want snippet suggestions for undefined step definitions
 
   Scenario: Snippet for undefined step with a pystring
-    When I run cucumber features/undefined_multiline_args.feature:3 -n
+    When I run cucumber features/undefined_multiline_args.feature:3 -s
     Then the output should contain
       """
       Given /^a pystring$/ do |string|
@@ -12,7 +12,7 @@ Feature: Snippets
       end
       """
   Scenario: Snippet for undefined step with a step table
-    When I run cucumber features/undefined_multiline_args.feature:9 -n
+    When I run cucumber features/undefined_multiline_args.feature:9 -s
     Then the output should contain
       """
       Given /^a table$/ do |table|
